--- a/src/components/GameState/UI.module.scss
+++ b/src/components/GameState/UI.module.scss
@@ -1,8 +1,8 @@
-
 @use "../common.scss" as *;
 
 .base {
   color: #fff;
+  background-color: black;
   position: absolute;
   width: 100%;
   height: 100dvh;
