--- a/src/components/ManualPlayController/ManualPlayController.module.scss
+++ b/src/components/ManualPlayController/ManualPlayController.module.scss
@@ -7,7 +7,9 @@
   &:active {
     background: #9f5eeb !important;
   }
-  box-shadow: inset 0px -2px 0px #7f44c3, inset 0px 1px 0px #9f5eeb;
+  box-shadow:
+    inset 0px -2px 0px #7f44c3,
+    inset 0px 1px 0px #9f5eeb;
 }
 
 .buttonSweeps {
@@ -18,7 +20,9 @@
   &:focus {
     background: #1ae380;
   }
-  box-shadow: inset 0px -2px 0px #10be68, inset 0px 1px 0px #1ae380;
+  box-shadow:
+    inset 0px -2px 0px #10be68,
+    inset 0px 1px 0px #1ae380;
 }
 
 .buttonGold {
@@ -29,7 +33,9 @@
   &:focus {
     background: #f0c72c !important;
   }
-  box-shadow: inset 0px -2px 0px #bf9e21, inset 0px 1px 0px #bf9e21;
+  box-shadow:
+    inset 0px -2px 0px #bf9e21,
+    inset 0px 1px 0px #bf9e21;
 }
 
 .cashoutButton {
@@ -40,7 +46,9 @@
   &:focus {
     background: #9f5eeb !important;
   }
-  box-shadow: inset 0px -2px 0px #7f44c3, inset 0px 1px 0px #9f5eeb;
+  box-shadow:
+    inset 0px -2px 0px #7f44c3,
+    inset 0px 1px 0px #9f5eeb;
 }
 
 .group {
