--- a/src/components/GameState/UI.module.scss
+++ b/src/components/GameState/UI.module.scss
@@ -2,7 +2,7 @@
 
 .base {
   color: #fff;
-  background-color: black;
+  background-color: rgb(7, 71, 161);
   position: absolute;
   width: 100%;
   height: 100dvh;
