--- a/src/components/base/GroupRow/GroupRow.module.scss
+++ b/src/components/base/GroupRow/GroupRow.module.scss
@@ -31,4 +31,14 @@
       margin-left: 2px;
     }
   }
+  .svg-icon {
+    pointer-events: none;
+    stroke-width: 0;
+    stroke: currentColor;
+    fill: currentColor;
+    flex-shrink: 0;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+  }
 }
