--- a/src/components/base/Input/Input.module.scss
+++ b/src/components/base/Input/Input.module.scss
@@ -1,10 +1,16 @@
+@use "../../common.scss" as *;
+
 .base {
   padding: 10px 12px;
-  background: rgba(var(--bg-color-rgb, 110, 98, 98), 0.3);
-  color: var(--text-color-hex, #ffffff);
+  color: rgba(var(--text-color-hex), 1);
   border-radius: 10px;
   border: none;
   outline: none;
   width: 100%;
-  backdrop-filter: blur(8px);
+}
+
+.disabled {
+  pointer-events: none;
+  cursor: pointer;
+  color: rgba(var(--text-color-hex), 0.1) !important;
 }
