--- a/src/components/base/InputWithIcon/InputWithIcon.module.scss
+++ b/src/components/base/InputWithIcon/InputWithIcon.module.scss
@@ -1,44 +1,57 @@
+@use "../../common.scss" as *;
+
 .base {
   position: relative;
   display: flex;
   border-radius: 10px;
   z-index: 1;
+  color: rgba(var(--text-color-hex), 1);
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
+  width: 100%;
+  height: 35px;
+  background: rgba(255, 255, 255, 0.15);
 }
 
 .icon {
   display: block;
   position: absolute;
-  width: 24px;
-  height: 24px;
-  left: 12px;
+  left: 11px;
   top: 50%;
   transform: translateY(-50%);
+  font-family: Inter;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 700;
 }
 
-.input {
-  color: var(--text-color-hex, #ffffff);
-  .base & {
-    padding-left: 66px;
-    padding-right: 46px;
-    border-radius: inherit;
-  }
+.input,
+.inputWithLabel,
+.label {
+  color: rgba(var(--text-color-hex), 1);
+  margin-left: 50px;
+  max-width: 90px;
+  padding: 0;
+  background: transparent;
+  text-align: left;
 }
 
-.clear {
-  opacity: 0;
+.label {
   position: absolute;
-  width: 20px;
-  height: 20px;
-  right: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  border: none;
-  transition: 200ms opacity ease-in-out;
-  cursor: pointer;
+  font-size: 10px;
+  top: 2px;
+}
 
-  &:focus,
-  .base:hover &,
-  .input:focus + & {
-    opacity: 1;
-  }
+.inputWithLabel {
+  margin-top: 15px;
+}
+
+.gold {
+  color: #d4af26;
+}
+
+.sweeps {
+  color: #10be68;
 }
