--- a/src/components/base/GroupRow/GroupRow.module.scss
+++ b/src/components/base/GroupRow/GroupRow.module.scss
@@ -48,6 +48,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 
   &.last {
     border-top-right-radius: 10px;
