--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,7 +1,7 @@
 *,
 html {
   --bet-bottom: 15px;
-  --bet-panel-background: 8, 30, 100;
+  --bet-panel-bg: 8, 30, 100;
 
   --bg-color-rgb: 255, 255, 255;
   --text-color-hex: 255, 255, 255;
